--- a/content/blog/sketch-4-three-city/index.mdx
+++ b/content/blog/sketch-4-three-city/index.mdx
@@ -15,13 +15,10 @@ slug: "sketch-4"
 draft: false
 ---
 
+import ThreeCity from "../../../src/components/visualizations/three-city"
+
 <div className="threejs-viz-container">
-  <iframe id="sketch-4"
-      className="resp-iframe"
-      title="sketch-4"
-      src="/visualizations/viz-three-city"
-      scrolling="no">
-  </iframe>
+  <ThreeCity />
 </div>
 
 My intro to using basic [three.js](https://threejs.org/) functions. Each building in this "city" features a randomly generated height and colour.
