--- a/content/blog/sketch-5-dynamic-grid/index.mdx
+++ b/content/blog/sketch-5-dynamic-grid/index.mdx
@@ -15,13 +15,10 @@ slug: "sketch-5"
 draft: false
 ---
 
+import DynamicGrid from "../../../src/components/visualizations/dynamic-grid"
+
 <div className="threejs-viz-container">
-  <iframe id="sketch-5"
-      className="resp-iframe"
-      title="sketch-5"
-      src="/visualizations/viz-dynamic-grid"
-      scrolling="no">
-  </iframe>
+  <DynamicGrid />
 </div>
 
 The idea here was to play with multiplied sine functions to create a visible "wave" over time. Combining simple functions makes for cool interactions with the long and short wave rhythms.
