--- a/content/blog/sketch-7-rising-pillars/index.mdx
+++ b/content/blog/sketch-7-rising-pillars/index.mdx
@@ -15,13 +15,10 @@ slug: "sketch-7"
 draft: false
 ---
 
+import RisingPillars from "../../../src/components/visualizations/rising-pillars"
+
 <div className="threejs-viz-container">
-  <iframe id="sketch-7"
-      className="resp-iframe"
-      title="sketch-7"
-      src="/visualizations/viz-rising-pillars"
-      scrolling="no">
-  </iframe>
+  <RisingPillars />
 </div>
 
 This uses combined sine waves from earlier sketches, but with the wave output displayed as the height of scattered pillars. That wave movement looks a lot cooler in 3D.
