removed filler sketches

--- a/content/blog/sketch-4-three-city/index.mdx
+++ b/content/blog/sketch-4-three-city/index.mdx
@@ -12,7 +12,7 @@ description: Generative 3D geometry
 options:
   - hideDesc
 slug: "sketch-4"
-draft: false
+draft: true
 ---
 
 import ThreeCity from "../../../src/components/visualizations/three-city"
