--- a/content/blog/sketch-5-dynamic-grid/index.mdx
+++ b/content/blog/sketch-5-dynamic-grid/index.mdx
@@ -12,7 +12,7 @@ description: Visualizing waveforms circle size
 options:
   - hideDesc
 slug: "sketch-5"
-draft: false
+draft: true
 ---
 
 import DynamicGrid from "../../../src/components/visualizations/dynamic-grid"
