--- a/content/blog/sketch-7-rising-pillars/index.mdx
+++ b/content/blog/sketch-7-rising-pillars/index.mdx
@@ -12,7 +12,7 @@ thumbnail: media/sketch-7/thumb.jpg
 options:
   - hideDesc
 slug: "sketch-7"
-draft: false
+draft: true
 ---
 
 import RisingPillars from "../../../src/components/visualizations/rising-pillars"
